# btemp

./: .cursor  .gitignore  Cargo.toml  README.md
docs/: architecture.mermaid  technical.md
src/: cpu_info.rs  group.rs  history.rs  lib.rs  main.rs  sensors.rs  storage_names.rs
src/ui/: chart.rs  mod.rs
tests/fixtures/: k10temp.json  k10temp.txt  nvme.json
